<resources>
    <string name="app_name">木香茗</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--头部名称-->
    <string name="home_title">木香茗</string>
    <string name="location">定位</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="placeusername">请输入用户名</string>
    <string name="password">密码</string>
    <string name="passwordaff">密码确认</string>
    <string name="inputpasswordaff">输入密码确认</string>
    <string name="placepassword">请输入密码</string>
    <string name="phone">手机号</string>
    <string name="placephone">请输入手机号</string>
    <string name="authcode">验证码</string>
    <string name="placeauthcode">请输入验证码</string>
    <string name="newpwd">新密码</string>
    <string name="inputnewpwd">请输入新密码</string>
    <string name="affpwd">确认密码</string>
    <string name="inputaffpwd">请再次输入新密码</string>
    <string name="complete">完成</string>
    <string name="submit">提交</string>
    <string name="imgauth">输入确认码</string>
    <string name="invitecode">邀请码</string>
    <string name="placrinvitecode">请输入邀请码</string>
    <string name="Sett">设置</string>
    <string name="nickName">昵称</string>
    <string name="persionmess">个人资料</string>
    <string name="revampName">更改名字</string>
    <string name="invitefriend">邀请好友</string>
    <string name="helpcent">帮助中心</string>
    <string name="mywallet">我的钱包</string>
    <string name="bankcarbinding">支付宝绑定</string>
    <string name="checking">审核中</string>
    <string name="commission">我的佣金</string>
    <string name="run">流水记录</string>
    <string name="tixian">提现记录</string>
    <string name="myteam">我的团队</string>
    <string name="aboutwe">关于我们</string>
    <string name="myorder">我的订单</string>
    <string name="orderdesc">订单详情</string>
    <string name="evaluate">发表评价</string>
    <string name="address">收货地址</string>
    <string name="newaddress">新建地址</string>
    <string name="revampphone">修改手机号</string>
    <string name="paysuccess">支付成功</string>
    <string name="mess">消息</string>
    <string name="shareString">请先购买任意一款产品成为代理后再来分享吧</string>
</resources>
