<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dlwx.onedrop.activitys.ForgitPwdActivity">
    <include
        layout="@layout/toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/div_color" />

        <TextView
            style="@style/texttitleblacksize"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.17"
            android:text="@string/phone" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/div_color" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <EditText
            android:id="@+id/et_useraccount"
            android:layout_width="0dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:inputType="phone"
            android:background="@null"
            android:hint="@string/placephone"
            android:padding="10dp"
            android:textSize="15sp" />
            <TextView
                android:id="@+id/tv_auth"
                style="@style/textcontentsizewhite"
                android:text="获取验证码"
                android:gravity="center_horizontal"
                android:layout_width="80dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape_auth_bg"
                />
        </LinearLayout>
    </LinearLayout>
    <View style="@style/div_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/div_color" />

        <TextView
            style="@style/texttitleblacksize"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.17"
            android:text="@string/authcode" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/div_color" />

        <EditText
            android:id="@+id/et_authcode"
            android:layout_width="0dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/placeauthcode"
            android:padding="10dp"
            android:textSize="15sp" />
    </LinearLayout>
    <View style="@style/div_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/div_color" />

        <TextView
            style="@style/texttitleblacksize"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.17"
            android:text="@string/newpwd" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/div_color" />

        <EditText
            android:id="@+id/et_newpwd"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/inputnewpwd"
            android:padding="10dp"
            android:textSize="15sp" />
    </LinearLayout>
    <View style="@style/div_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/div_color" />

        <TextView
            style="@style/texttitleblacksize"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.17"
            android:text="@string/affpwd" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/div_color" />

        <EditText
            android:id="@+id/et_affpwd"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/inputaffpwd"
            android:padding="10dp"
            android:textSize="15sp" />
    </LinearLayout>
    <View style="@style/div_line" />

    <Button
        android:text="@string/complete"
        android:id="@+id/btn_login"
        android:layout_marginTop="40dp"
        style="@style/Buutton_submit"
        />

</LinearLayout>
