<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dlwx.onedrop.activitys.LoginActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/icon_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <View style="@style/div_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">


            <TextView
                style="@style/texttitleblacksize"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.2"
                android:text="@string/phone" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/div_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@null"
                    android:hint="@string/placephone"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_auth"
                    style="@style/textcontentsizewhite"
                    android:layout_width="80dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_auth_bg"
                    android:gravity="center_horizontal"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="获取验证码" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/div_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                style="@style/texttitleblacksize"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.2"
                android:text="@string/authcode" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/div_color" />

            <EditText
                android:id="@+id/et_authcode"
                android:layout_width="0dp"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/placeauthcode"
                android:padding="10dp"
                android:textSize="15sp" />
        </LinearLayout>

        <View style="@style/div_line" />


        <Button

            android:id="@+id/btn_next"
            style="@style/Buutton_submit"
            android:layout_marginTop="50dp"
            android:text="下一步" />
    </LinearLayout>


</LinearLayout>
